show script errs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
             </div>
           </div>
         </div>
-        <div class="row" *ngIf="errorStr">
+        <div class="row" *ngIf="errorDetail">
           <div class="form-group col">
             <div class="input-group">
               <div class="input-group-addon">Details:</div>
