--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,7 +105,7 @@
 
 <div class="card">
 <p>
-(C) <a href="https://twitter.com/ematiu">@ematiu</a> using <a href="https://github.com/bitpay/bitcore-lib/pull/230">Bitcore-lib-cash</a>. MIT Licenced
+2018 (C) <a href="https://twitter.com/ematiu">@ematiu</a> using <a href="https://github.com/bitpay/bitcore-lib/pull/230">Bitcore-lib-cash</a>. MIT Licenced
 </div>
 
 </div>
