--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,7 +126,7 @@
             <div>Opcode references:</div>
         </div>
         <div class="row">
-    <a  href="https://github.com/bitcoincashorg/spec/blob/master/may-2018-reenabled-opcodes.md"> New Opcodes</a>
+    <a  href="https://github.com/bitcoincashorg/bitcoincash.org/blob/master/spec/may-2018-reenabled-opcodes.md"> New Opcodes</a>
         </div>
         <div class="row">
     <a  href="https://en.bitcoin.it/wiki/Script"> All Opcodes</a>
